--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Android</string>
     <string name="wifi_name">Wifi name</string>
+    <string name="connect_wifi">Connect to wifi</string>
+    <string name="password">Password</string>
 </resources>
