feat(Joystick): Added joystick view and listener to control the direction and accelerate

--- a/Android/foresight/app/src/main/res/values/strings.xml
+++ b/Android/foresight/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Android</string>
+    <string name="app_name">Foresight</string>
     <string name="wifi_name">Wifi name</string>
     <string name="connect_wifi">Connect to wifi</string>
     <string name="password">Password</string>
